--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -31,6 +31,18 @@
                          model="@Model.Quotes" />
             </div>
             <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Photos"
+                         model="@Model.CaringPhotos"/>
+            </div>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Photos"
+                         model="@Model.SadPhotos" />
+            </div>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Photos"
+                         model="@Model.HappyPhotos" />
+            </div>
+            <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_CounterGame" />
             </div>
         </div>
