--- a/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
+++ b/Ej.Client/Views/Shared/_CrisisBox_EmergencyContacts.cshtml
@@ -17,7 +17,7 @@
                     {
                         <div class="col col-3 text-center">
                             <a href="https://wa.me/@contact.PhoneNumber" title="Bel @contact.Name">
-                                <img src="@contact.ImageUri" class="img-fluid img-thumbnail rounded-circle" />
+                                <img src="/karus/data/crisisbox/emergencycontacts/@contact.Filename" class="img-fluid img-thumbnail rounded-circle" />
                                 <p class="contact-name">@contact.Name</p>
                             </a>
                         </div>
@@ -27,4 +27,3 @@
         </div>
     </div>
 </div>
-
