Added two emtpy placeholders for Karus Crisisbox: H.A.L.T. and Emergency Plans.

--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -19,6 +19,9 @@
                          model="@Model.EmergencyContacts" />
             </div>
             <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Halt" />
+            </div>
+            <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Spotify_Items" 
                          model="@Model.SpotifyMusic" />
             </div>
@@ -41,6 +44,9 @@
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Photos"
                          model="@Model.HappyPhotos" />
+            </div>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_EmergencyPlans" />
             </div>
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_CounterGame" />
