--- a/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
@@ -189,7 +189,7 @@
 
                 const img = document.createElement('img');
 
-                img.src = `/karus/data/crisisbox/${gameTypes[countType].svg}`;
+                img.src = `/karus/data/crisisbox/countergame/${gameTypes[countType].svg}`;
                 img.dataset.index = i;
                 img.classList.add('svg-icon');
                 img.style.padding = '0.6rem';
