--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -349,6 +349,7 @@ footer > p > a {
 
 }
 
+
 /*--------------------------------------------------------------
 # CRISISBOX QUOTES
 --------------------------------------------------------------*/
@@ -391,6 +392,7 @@ footer > p > a {
         }
     }
 }
+
 
 /*--------------------------------------------------------------
 # CRISISBOX COUNTER GAME
@@ -461,6 +463,7 @@ footer > p > a {
     }
 }
 
+
 /*--------------------------------------------------------------
 # CRISISBOX PHOTOS
 --------------------------------------------------------------*/
@@ -471,4 +474,20 @@ footer > p > a {
         height: 150px; 
         object-fit: cover;
     }
+}
+
+
+/*--------------------------------------------------------------
+# CRISISBOX EMERGENCY PLANS
+--------------------------------------------------------------*/
+.karus_emergency_plans {
+
+}
+
+
+/*--------------------------------------------------------------
+# CRISISBOX H.A.L.T.
+--------------------------------------------------------------*/
+.karus_halt {
+
 }
