Added Karus Crisisbox Emergeny Plan for Craving.

--- a/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
@@ -1,9 +1,8 @@
-﻿@{
-}
-
-<div class="card karus_countergame" id="karus_countergame">
+﻿<div class="card karus_countergame" id="karus_countergame">
     <div class="card-body">
-        <h5>Counter Game</h5>
+        <div class="card-title">
+            <h5>Counter Game</h5>
+        </div>
 
         <div class="mb-4 text-center">
             <h6>Choose the Maximum Items to Count</h6>
