--- a/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
@@ -1,5 +1,34 @@
-﻿<div class="card karus_emergency_plans">
-    <div class="card-body text-center">
-        <h5>Emergency Plans</h5>
+﻿@{
+    var items = new List<string>
+    {
+        "Ga wandelen in de buitenlucht.",
+        "Raadpleeg je flitskaartje.",
+        "Ga naar een toilet en hou je polsen onder koud water.",
+        "Start met tellen. Gebruik de Counter Game hier.",
+        "Lees wat over technologie op je telefoon. Die heb je altijd bij je.",
+        "Verleg je aandacht door complexe materie te programmeren.",
+        "Bel Karus of iemand van je emergency contacts."
+    };
+}
+
+<div class="card karus_emergency_plans">
+    <div class="card-body">
+        <div class="card-title">
+            <h5>Emergency Plan (Craving)</h5>
+            <i class="bi bi-fullscreen float-end" style="cursor: pointer;" role="link"></i>
+        </div>
+        @if (items is not null && items.Count > 0)
+        {
+            <ul>
+                @{
+                    var x = 0;
+                }
+                @foreach (var item in items)
+                {
+                    x += 1;
+                    <li><i class="bi bi-@x-circle"></i>@item</li>
+                }
+            </ul>
+        }
     </div>
 </div>
