--- a/Ej.Client/Views/Shared/_Crisisbox_Quotes.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Quotes.cshtml
@@ -7,13 +7,13 @@
 
 <div class="card karus_quotes">
     <div class="card-body">
-        <h5 class="ps-4">
-            Inspirational Quotes
+        <div class="card-title">
+            <h5>Inspirational Quotes</h5>
             <i class="bi bi-fullscreen float-end" style="cursor: pointer;" role="link"></i>
-            <i title="Refresh" class="bi bi-arrow-clockwise float-end me-2" role="link"></i>
-        </h5>
+        </div>
         @if (Model?.Count > 0)
         {
+
             <ul>
                 @foreach (var quote in Model)
                 {
