Added Karus Crisisbox news items.

--- a/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
@@ -2,6 +2,7 @@
     var items = new List<string>
     {
         "Ga wandelen in de buitenlucht.",
+        "Neem je hoofdtelefoon en luister muziek of een podcast.",
         "Raadpleeg je flitskaartje.",
         "Ga naar een toilet en hou je polsen onder koud water.",
         "Start met tellen. Gebruik de Counter Game hier.",
