--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -535,3 +535,10 @@ footer > p > a {
         
     }
 }
+
+
+/*--------------------------------------------------------------
+# CRISISBOX NEWS ITEMS
+--------------------------------------------------------------*/
+.karus_news_items {
+}
