--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -10,7 +10,10 @@
 <section class="karus karus_crisisbox">
 
     <div class="container p-0">
-        <div class="row g-4" data-masonry='{"percentPosition": true }'>
+        <div class="row g-5" data-masonry='{"percentPosition": true }'>
+            <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_EmergencyPlans" />
+            </div>
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_MoneyCounter" />
             </div>
@@ -46,12 +49,11 @@
                          model="@Model.HappyPhotos" />
             </div>
             <div class="col col-12 col-md-6">
-                <partial name="_Crisisbox_EmergencyPlans" />
+                <partial name="_Crisisbox_News_Items" />
             </div>
             <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_CounterGame" />
             </div>
-        </div>
-    </div>
+        </div></div>
 
 </section>
