Fixed typo in karus.scss.

--- a/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
@@ -27,7 +27,7 @@
                 @foreach (var item in items)
                 {
                     x += 1;
-                    <li><i class="bi bi-@x-circle"></i>@item</li>
+                    <li><i class="bi bi-@x-circle-fill"></i>@item</li>
                 }
             </ul>
         }
