Refactored Karus Crisisbox Spotify Items.

--- a/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
@@ -1,5 +1,8 @@
 ﻿<div class="card karus_halt">
     <div class="card-body text-center">
         <h5>H.A.L.T.</h5>
+        <div>
+
+        </div>
     </div>
 </div>
