--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -11,6 +11,8 @@ $karus-u-color: #af0529;
 $karus-s-color: #c10053;
 $karus-body-bg: #080000;
 $karus-body-color: var(--bs-gray-400);
+$karus-icon-fontsize: 1.5rem;
+$karus-icon-transition: transform 0.4s ease;
 
 /*--------------------------------------------------------------
 # GENERAL
@@ -503,4 +505,35 @@ footer > p > a {
 # CRISISBOX NEWS ITEMS
 --------------------------------------------------------------*/
 .karus_news_items {
+}
+
+/*--------------------------------------------------------------
+# CRISISBOX SPOTIFY-ITEMS
+--------------------------------------------------------------*/
+.karus_spotify_items {
+
+    .spotify-item {
+
+        .spotify-item-icon {
+
+            i {
+                color: $karus-r-color;
+                font-size: $karus-icon-fontsize;
+                left: 0;
+                top: -0.3rem;
+                transition: $karus-icon-transition;
+            }
+        }
+    }
+
+    .spotify-item:last-child {
+        margin-bottom: 0 !important;
+        padding-bottom: 0;
+    }
+
+    .spotify-item-play i {
+        color: $karus-r-color;
+        font-size: $karus-icon-fontsize;
+        transition: $karus-icon-transition;
+    }
 }
