Fixed Karus Crisisbox Halt layout.

--- a/Ej.Client/Views/_ViewImports.cshtml
+++ b/Ej.Client/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using Ej.Client.ViewModels
 @using Ej.Application.Models
 @using Ej.Application.Contracts
+@using Ej.Karus.Extensions
 
 @inject ITenantProvider _tenantProvider
 
