--- a/Ej.Client/Views/Shared/_Crisisbox_MoneyCounter.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_MoneyCounter.cshtml
@@ -4,6 +4,7 @@
 <div class="card karus_moneycounter" id="karus_moneycounter">
     <div class="card-body">
         <h5>Money Counter</h5>
+        <h6 class="text-center">Kijk hoeveel je bespaart hebt door niet te drinken en (nog) niet te roken.</h6>
         <div class="container">
             <div class="row">
                 <div class="col text-center no-x" id="no-drinking">
