--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -37,6 +37,9 @@
                          model="@Model.Quotes" />
             </div>
             <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_Flitskaart" />
+            </div>
+            <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Photos"
                          model="@Model.CaringPhotos"/>
             </div>
