--- a/Ej.Client/Views/Karus/Flitskaart.cshtml
+++ b/Ej.Client/Views/Karus/Flitskaart.cshtml
@@ -7,12 +7,12 @@
 
 <section class="karus_flitskaart">
 
-    <div class="container p-0">
+    <div class="container">
         <div class="row g-4 justify-content-center">
             <div class="col col-auto">
                 <img class="img-fluid" style="max-height: 700px;" src="~/karus/data/flitskaart/flitskaart-obverse.png" alt="Flitskaart voorzijde" />
             </div>
-            <div class="col col-md-auto">
+            <div class="col col-auto">
                 <img class="img-fluid" style="max-height: 700px;" src="~/karus/data/flitskaart/flitskaart-reverse.png" alt="Flitskaart keerzijde" />
             </div>
         </div>
