--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -95,6 +95,16 @@ h6 {
 }
 
 .card {
+    .card-body {
+        h5 + h6 {
+            margin-bottom: 1.4rem;
+            font-size: smaller;
+        }
+        h5:has(+ h6) {
+            margin-bottom: 0.5rem;
+        }
+    }
+
     .card-title {
         display: flex;
         flex-shrink: 0;
@@ -497,9 +507,14 @@ footer > p > a {
 }
 
 /*--------------------------------------------------------------
-# CRISISBOX H.A.L.T.
+# CRISISBOX HALT
 --------------------------------------------------------------*/
 .karus_halt {
+
+    .halt-item:last-child {
+        padding-bottom: 0;
+    }
+
     .halt-initial {
         width: 3rem; /* Circle diameter */
         height: 3rem; /* Circle diameter */
@@ -513,9 +528,6 @@ footer > p > a {
         font-weight: bolder; /* Bold text in the circle */
         text-transform: uppercase; /* Ensure initials are uppercase */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-    }
-
-    .halt-initial:hover {
     }
 }
 
@@ -553,5 +565,20 @@ footer > p > a {
         color: $karus-r-color;
         font-size: $karus-icon-fontsize;
         transition: $karus-icon-transition;
+    }
+}
+
+
+/*--------------------------------------------------------------
+# CRISISBOX FLITSKAART
+--------------------------------------------------------------*/
+.crisisbox_flitskaart {
+    img {
+        filter: grayscale(80%);
+        transition: filter 0.4s ease;
+    }
+
+    img:hover {
+        filter: none;
     }
 }
