--- a/Ej.Client/Views/Karus/Crisisbox.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox.cshtml
@@ -44,6 +44,9 @@
                          model="@Model.CaringPhotos"/>
             </div>
             <div class="col col-12 col-md-6">
+                <partial name="_Crisisbox_LifeGoals" />
+            </div>
+            <div class="col col-12 col-md-6">
                 <partial name="_Crisisbox_Photos"
                          model="@Model.SadPhotos" />
             </div>
