--- a/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_EmergencyPlans.cshtml
@@ -3,7 +3,7 @@
     {
         "Ga wandelen in de buitenlucht.",
         "Neem je hoofdtelefoon en luister muziek of een podcast.",
-        "Denk aan de gevolgen van je acties en de dingen die je wil realiseren: Ekzakt en Colombia.",
+        "Denk aan de gevolgen van je acties en de dingen die je wil realiseren, je life-goals.",
         "Raadpleeg je flitskaartje.",
         "Ga naar een toilet en hou je polsen onder koud water.",
         "Start met tellen. Gebruik de Counter Game hier.",
