--- a/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_Halt.cshtml
@@ -15,7 +15,7 @@
         <div>
             @foreach (var item in halt)
             {
-                <div class="d-flex align-items-start mb-3 halt-item">
+                <div class="d-flex align-items-start halt-item">
                     <!-- Circle -->
                     <div class="halt-initial me-3 flex-shrink-0">@item.GetInitial()</div>
 
