--- a/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
+++ b/Ej.Client/Views/Shared/_Crisisbox_CounterGame.cshtml
@@ -1,8 +1,6 @@
 ﻿<div class="card karus_countergame" id="karus_countergame">
     <div class="card-body">
-        <div class="card-title">
-            <h5>Counter Game</h5>
-        </div>
+         <h5>Counter Game</h5>
 
         <div class="mb-4 text-center">
             <h6>Choose the Maximum Items to Count</h6>
@@ -254,7 +252,7 @@
                 icon.style.filter = '';
             });
 
-            document.getElementById('countDisplay').textContent = '0 / 0';
+            document.getElementById('countDisplay').textContent = '0 / ' + maxCount;
 
         });
 
