--- a/Ej.Client/Views/Karus/Crisisbox/Photos.cshtml
+++ b/Ej.Client/Views/Karus/Crisisbox/Photos.cshtml
@@ -1,44 +1,39 @@
-﻿@{
-    Layout = "~/Views/Shared/_Karus_Layout.cshtml";
+﻿@model CrisisboxPhotosViewModel
+
+@{
+    Layout = "~/Views/Shared/_Karus_Layout_Fullscreen.cshtml";
+
+    ViewBag.Title = Model.Title;
 }
 
-<h1>Photos</h1>
-<p>@ViewData["SubTitle"]</p>
-
-<div id="carouselExampleCaptions" class="carousel slide">
+<div id="carouselPhotos" class="carousel slide">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+        @for (int x = 0; x < Model.Items.Count; x++)
+        {
+            <button type="button" data-bs-target="#carouselPhotos" data-bs-slide-to="@x" class="@(x == 0 ? "active" : string.Empty)" aria-current="@(x == 0 ? true : false)" aria-label="Slide @(x + 1)"></button>
+        }
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+    <div class="carousel-inner text-center">
+        @for (int x = 0; x < Model.Items.Count; x++)
+        {
+            <div class="carousel-item @(x == 0 ? "active" : string.Empty)" >
+                <img src="@Model.Items[x].GetPhotoUri("carousel")"
+                     class="d-block mx-auto img-fluid"
+                     style="max-height: 100%; max-width: 100%;"
+                     alt="@Model.Items[x].Description">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>@Model.Items[x].Description</h5>
+                </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div>
-        </div>
+        }
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselPhotos" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselPhotos" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
