--- a/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Layout_Fullscreen.cshtml
@@ -21,11 +21,11 @@
             <div class="modal-content">
 
                 <div class="modal-header">
-                    <h5 class="modal-title">Modal Heading</h5>
+                    <h5 class="modal-title">@ViewBag.Title</h5>
                     <button type="button" class="btn-close btn-close-white" name="btn-close" data-bs-dismiss="modal"></button>
                 </div>
 
-                <div class="modal-body">
+                <div class="modal-body d-flex justify-content-center align-items-center">
                     @RenderBody()
                 </div>
 
