Updated Karus header.

--- a/Ej.Client/Views/Shared/_Karus_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Karus_Header.cshtml
@@ -10,6 +10,22 @@
             <a asp-controller="Karus" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Karus">
                 <img class="display-1 img-fluid mx-auto" src="~/karus/assets/karus-logo.svg" />
             </a>
+            <p class="text-center">
+                <span class="karus-k-color">B</span>
+                <span class="karus-r-color">y</span>
+                <span>&nbsp;</span>
+                <span class="karus-a-color">E</span>
+                <span class="karus-s-color">r</span>
+                <span class="karus-r-color">i</span>
+                <span class="karus-u-color">c</span>
+                <span>&nbsp;</span>
+                <span class="karus-r-color">J</span>
+                <span class="karus-k-color">a</span>
+                <span class="karus-a-color">n</span>
+                <span class="karus-r-color">s</span>
+                <span class="karus-u-color">e</span>
+                <span class="karus-s-color">n</span>
+            </p>
         </div>
     </div>
 </header>
