--- a/Ej.Client/wwwroot/css/karus.scss
+++ b/Ej.Client/wwwroot/css/karus.scss
@@ -43,6 +43,26 @@ body {
     }
 }
 
+.karus-k-color {
+    color: $karus-k-color;
+}
+
+.karus-a-color {
+    color: $karus-a-color;
+}
+
+.karus-r-color {
+    color: $karus-r-color;
+}
+
+.karus-u-color {
+    color: $karus-u-color;
+}
+
+.karus-s-color {
+    color: $karus-s-color;
+}
+
 p {
     line-height: 1.6rem;
 }
@@ -121,7 +141,7 @@ h6 {
     text-align: center;
 }
 
-footer > p > a {
+.footer > p > a {
     background-color: inherit;
     color: inherit;
     text-decoration: none;
